Fix images in blog on mobile

--- a/components/blog-section.module.scss
+++ b/components/blog-section.module.scss
@@ -112,4 +112,12 @@
   .section {
     padding: 32px 0;
   }
+  .section {
+    & img {
+      width: 100%;
+      margin-right: 0px;
+      box-sizing: unset;
+      padding: 0 0 20px 0;
+    }
+  }
 }
